-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 20, 21, 22, 23, 24
-
Component/s: hotspot
-
b06
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8353653 | 21.0.8 | Satyen Subramaniam | P4 | Resolved | Fixed | b01 |
import java.util.Arrays;
public class float16_mainline_add {
public static short sum(short a, short b) {
return (short)Float.float16ToFloat(Float.floatToFloat16(Float.float16ToFloat(a) + Float.float16ToFloat(b)));
}
public static void micro(short [] r, short [] a, short [] b) {
for (int i = 0; i < a.length; i++) {
r[i] = sum(a[i], b[i]);
}
}
public static void main (String [] args) {
short [] res = new short[1024];
short [] src1 = new short[1024];
short [] src2 = new short[1024];
Arrays.fill(src1, (short)1);
Arrays.fill(src2, (short)2);
for (int i = 0;i < 100000; i++) {
micro(res, src1, src2);
}
System.out.println("[res] " + res[3]);
}
}
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jatinbha/sandboxes/jdk/jdk/src/hotspot/share/opto/vectornode.cpp:1386), pid=3638113, tid=3638127
# Error: assert(bt == T_SHORT) failed
#
# JRE version: OpenJDK Runtime Environment (24.0) (slowdebug build 24-internal-adhoc.root.jdk)
# Java VM: OpenJDK 64-Bit Server VM (slowdebug 24-internal-adhoc.root.jdk, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x16b29f7] VectorCastNode::opcode(int, BasicType, bool)+0xcd
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P %E" (or dumping to /home/jatinbha/code/java/FP16/core.3638113)
#
# An error report file with more information is saved as:
# /home/jatinbha/code/java/FP16/hs_err_pid3638113.log
#
# Compiler replay data is saved as:
# /home/jatinbha/code/java/FP16/replay_pid3638113.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
Aborted (core dumped)
Command Line: java -XX:+TraceSuperWord -XX:CompileOnly=float16_mainline_add::micro -Xbatch -XX:-TieredCompilation -cp . float16_mainline_add
- backported by
-
JDK-8353653 Fatal error in auto-vectorizer with float16 kernel.
-
- Resolved
-
- causes
-
JDK-8335860 compiler/vectorization/TestFloat16VectorConvChain.java fails with non-standard AVX/SSE settings
-
- Resolved
-
-
JDK-8336827 compiler/vectorization/TestFloat16VectorConvChain.java timeouts on ppc64 platforms after JDK-8335860
-
- Resolved
-
- relates to
-
JDK-8294588 Auto vectorize half precision floating point conversion APIs
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/55fd1ed2
-
Commit(master)
openjdk/jdk21u-dev/ca8d6afd
-
Review(master)
openjdk/jdk21u-dev/1549
-
Review(master)
openjdk/jdk/20062