8333890: Fatal error in auto-vectorizer with float16 kernel.